# fusenchat

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: fusenchat_codex_instruction.md  github_release_workflow.md
src/: App.tsx  local-fonts.d.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  png_metadata.rs
src/components/: BubbleCard.tsx  ChatArea.tsx  Header.tsx  InputPanel.tsx
src/lib/: bubbleRenderer.ts  dateUtils.ts  fileUtils.ts  fontUtils.ts  pngMetadata.ts  pngMetadataWeb.ts  runtime.ts
