[package]
name = "fusenchat"
version = "0.1.0"
description = "fusenchat desktop app"
authors = ["OpenAI Codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
drag = "2.1.1"
png = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-opener = "2"
